feat: added more controllers
